Fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .content {
     background: #F7F7F7;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
 }
 .content .navbar {
     z-index:1000;
