--- a/src/components/navbar-mobile.css
+++ b/src/components/navbar-mobile.css
@@ -1,10 +1,15 @@
 .navbar {
     margin-bottom: 20px;
+    max-width: 100%
+  }
+
+  .navbar-default{
+    max-width:100%;
   }
   
   .nav-mobile {
     position: fixed;
-    width: 100%;
+    width:100%;
     background-color: #C9886D; 
     height: 0px;
   }
